2006-02-09 01:14  hjanuschka

	* ChangeLog, bartlby.cfg, bartlby.startup, include/bartlby.h,
	  src/check.c, src/global.c, src/perf.c, src/client/agent.c:
	  datalib: mysql/ catch failed logins core: fixed some setuid
	  problems with datalib core: zero worker detected and logged core:
	  network code re-worked, much faster and cleaner now core:
	  encode/decode removed php: encode/decode removed ui: topology map
	  manager added ui: nicer menu (flap) ui: server_detail (added)
	  startup sh: pre-start check if logfile is writeable

2006-02-05 22:49  hjanuschka

	* ChangeLog, bartlby.cfg, src/bartlby.c, src/libs/mysql.c: [no log
	  message]

2006-02-02 23:14  hjanuschka

	* mysql.shema: fixed mysql.shema

2006-01-29 16:53  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/client/agent.c,
	  src/libs/mysql.c: server icon

2006-01-20 00:30  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/Makefile,
	  src/bartlby.c, src/downtime.c, src/sched.c, src/shm.c,
	  src/libs/mysql.c: introducing downtime's

2006-01-16 21:51  hjanuschka

	* include/bartlby.h, src/check.c, src/perf.c: performance stuff
	  moved to perf.c timeing information on perf handler

2006-01-10 23:37  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/global.c,
	  src/trigger.c: some changes  trigger msg comes out of cfgfile
	  with some $VAR macros

2006-01-10 01:00  hjanuschka

	* Makefile, src/Makefile, src/client/Makefile, src/libs/Makefile:
	  make install fixes

2006-01-10 00:53  hjanuschka

	* bartlby.cfg, include/bartlby.h, src/bartlby.c, src/check.c,
	  src/sched.c: minor changes

2006-01-09 00:20  hjanuschka

	* Makefile, bartlby.cfg, mysql.shema, src/Makefile,
	  src/client/agent.c: install target

2006-01-08 17:39  hjanuschka

	* Makefile, src/Makefile, src/client/Makefile, src/libs/Makefile:
	  make install

2006-01-08 17:17  hjanuschka

	* ChangeLog, bartlby.cfg, mysql.shema, src/bartlby.c, src/check.c,