@@ -1,0 +1,11 @@
+CC = gcc
+CPPVA = cp -pva
+RMVFR = rm -vfr
+MKDIRP = mkdir -p
+EXTRAOPTIONS = -g -Wall
+INCLUDE_L = -I../include/
+INCLUDE_LL = -I../../include/
+INCLUDE_MYSQL = -I/usr/include/mysql/
+DYNLINK = -fPIC -shared
+LMYSQL = -lmysqlclient
+LDL = -ldl
