@@ -5,7 +5,7 @@ shm_key=/var/tmp/
 shm_size=10
 trigger_dir=/storage/SF.NET/BARTLBY/bartlby-core/trigger
 basedir=/storage/SF.NET/BARTLBY/bartlby-core/
-user=root
+user=klewan
 logfile=/var/log/bartlby
 daemon=true
 xlogfile=/dev/stdout
@@ -24,7 +24,7 @@ mysql_db=poseidon
 
 
 agent_plugin_dir=/storage/SF.NET/BARTLBY/bartlby-plugins
-allowed_ips=127.0.0.1,192.168.2.228,192.168.2.11
+allowed_ips=192.168.2.228,192.168.2.11,192.168.2.10,127.0.0.1
 agent_load_limit=50
 
 
