@@ -1,24 +1,27 @@
+include ../Makefile.conf
+
 OBJS = bartlby.o config.o global.o sched.o shm.o check.o trigger.o daemon.o replication.o perf.o downtime.o ack.o
 
 .SUFFIXES: .c .S .o
 
 .c.o:
 
-	gcc -g  -I../include/  -Wall -g -c $<
+	$(CC) $(EXTRAOPTIONS)  $(INCLUDE_L)   -c $<
 
 
 install: all
-	cp -v ../bartlby ${BARTLBY_HOME}/bin/
-	cp -v ../bartlby ${BARTLBY_HOME}/
+	$(CPPVA) ../bartlby ${BARTLBY_HOME}/bin/
+	$(CPPVA) ../bartlby ${BARTLBY_HOME}/
 	
 
 bartlby: ${OBJS}
-	gcc  -g -I../include/ -ldl  -o ../bartlby ${OBJS}
+	$(CC)  $(EXTRAOPTIONS) $(INCLUDE_L) $(LDL)  -o ../bartlby ${OBJS}
 
 
 
 all:    bartlby
 
 
+
 clean:
-	rm -fv *.o 
+	$(RMVFR) *.o 
